# logicfoil

./: CMakeLists.txt  README.md  library.h
common/: common.h  logger.h
component/: component.h
foil/: component.h  entity.h  library.h
test/: test.cpp
